# django-questionnaire-core

./: .gitignore  .travis.yml  README.md  manage.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
example_app/: settings.py  urls.py  views.py
example_app/templates/: questionnaire_form.html
questionnaire_core/: __init__.py  admin.py  apps.py  fields.py  forms.py  settings.py
questionnaire_core/fixtures/: test1.json
questionnaire_core/models/: __init__.py  questionnaire.py  result.py
questionnaire_core/question_types/: __init__.py  base.py  boolean.py  choices.py  file_upload.py  multiple.py  number.py  range.py  text.py
questionnaire_core/views/: generic.py
tests/: base.py  settings.py  test_forms.py  test_models.py  test_views.py  urls.py
tests/templates/: test_base.html
