[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:report]
fail_under = 100

[flake8]
exclude = locale,__pycache__,.pyc,templates,migrations
max-line-length = 119

[isort]
lines_after_imports = 2
known_first_party = questionnaire_core
known_third_party = django,ordered_model
skip=migrations
